css/main.css
* {
  box-sizing: border-box;
  user-drag: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}
body {
  width: 100%; height: 100%;
  margin: 0px; padding: 0px;
  background-color: #F5F6ED;
}

/*---Fonts ---*/

@font-face {
  font-family: 'Neoteric';
  src: url('../assets/neoteric.ttf') format('truetype');
}

/*--- Animation ---*/

@keyframes pulse {
  from {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }

  50% {
    -webkit-transform: scale3d(1.2, 1.2, 1.2);
    transform: scale3d(1.2, 1.2, 1.2);
  }
  to {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
}
.pulse {
  -webkit-animation-name: pulse;
  animation-name: pulse;
}

@keyframes flip {
  from {
    -webkit-transform: perspective(400px) rotate3d(0, 1, 0, -360deg);
    transform: perspective(400px) rotate3d(0, 1, 0, -360deg);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }

  40% {
    -webkit-transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
    transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -190deg);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }

  50% {
    -webkit-transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
    transform: perspective(400px) translate3d(0, 0, 150px) rotate3d(0, 1, 0, -170deg);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }

  80% {
    -webkit-transform: perspective(400px) scale3d(.85, .85, .85);
    transform: perspective(400px) scale3d(.85, .85, .85);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }

  to {
    -webkit-transform: perspective(400px);
    transform: perspective(400px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
}

.animated.flip {
  -webkit-backface-visibility: visible;
  backface-visibility: visible;
  -webkit-animation-name: flip;
  animation-name: flip;
}

@keyframes type{
  from { width: 0; }
}

@keyframes blink{
  0% { opacity:1; }
  50% { opacity:0; }
  100% { opacity:1; }
}
.typed-cursor{
  opacity: 1;
  -webkit-animation: blink 0.7s infinite;
  -moz-animation: blink 0.7s infinite;
  animation: blink 0.7s infinite;
}

  .cortlandt-red {
    color: #FF2444;
  }
  .firstSegment {
    height: 100vh;
  }
    .mission-statement {
      position: relative;
      font-size: 4.5em;
      padding-top: 38vh;
      font-family: 'Didot', 'Comic Sans';
      text-align: center;
      color: #333436;
      }
    .statement {
      display: none;
    }
    .logo {
      display: block;
      margin: 0 auto;
      margin-top: 8em;
      width: 20em;
      animation-duration: 1.75s;
      animation-iteration-count: 1;
      animation-name:flip;

    }
  .secondSegment {
    min-height: 35em;
    background-image: url("../assets/nycwtc.jpg");
    background-size: cover;
    background-width: 100%;
    background-position: center;
    background-attachment: fixed;
  }
  .thirdSegment {
    min-height: 70em;
  }
  .thirdSegment .seven {
    height: 20em;
    width: 100%;
    margin:2.5%;
    border-width: 0.5px;
    border-style: solid;
    border-color: #d5d5d5;
  }
    .work1 {
      height:100%;
      width: 100%;
      background-image: url("../assets/chatstyle.jpg");
      background-size: cover;
      background-position: center;
    }
    .work2 {
      height:100%;
      width: 100%;
      background-image: url("../assets/find.jpg");
      background-size: cover;
      background-position: center;
    }
    .work3 {
      height:100%;
      width: 100%;
      background-image: url("../assets/pathway.jpg");
      background-size: cover;
      background-position: center;
    }
    .work4 {
      height:100%;
      width: 100%;
      background-image: url("../assets/gigs.jpg");
      background-size: cover;
      background-position: center;
    }
  .fourthSegment {
    min-height: 35em;
    width: 100%;
    background-image: url("../assets/sf-night-min.jpeg");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
  }
  .fifthSegment {
    height: 50em;
  }
    .fifthSegment p, .seventhSegment p {
      font-size: 1.8em;
      font-weight: lighter;
    }
  .sixthSegment {
    height: 35em;
    background-color: #7A7C7F;
  }
  .seventhSegment {
    height: 100vh;
  }
  .team-photos {
    margin: 2em !important;
  }
  .img-description {
    position: absolute;
    width: 202px;
    height: 202px;
    margin: 0 auto;
    top: 0.5em;
    bottom: 0;
    left: 0;
    right: 0;
    padding-top:18%;
    border-radius: 50%;
    background: #FF2444;
    color: white;
    text-align: center;
    visibility: hidden;
    opacity: 0;
    transition: all 0.2s ease-in-out 0s;
    line-height: 1;
    font-family: "Neoteric";
    letter-spacing: 1px;
  }
  .profile-pic:hover .img-description {
    visibility: visible;
    opacity: 0.8;
  }

  footer {
    height: 28em;
    text-align: center;
    font-style: 'avenir';
    font-weight: lighter;
  }
  footer h2 {
    margin-top: 0;
    font-family: "Neoteric";
  }
  footer img {
    display: block;
    width: 10em;
    margin: 0 auto;
    margin-top: 5em;
  }
  footer p {
    font-size: 12px;
  }
  .ui.top.fixed.menu {
    opacity: 0.8;
    background-color: #F5F6ED;
  }
  @media (min-width: 650px) {
    .item span {
      position: relative;
      font-size: 1.25em;
      color: #000;
      text-decoration: none;
    }
    .item span:hover {
      color: #000;
    }
    .item span:before {
      content: "";
      position: absolute;
      width: 100%;
      height: 1px;
      bottom: 0;
      left: 0;
      background-color: #000;
      visibility: hidden;
      transform: scaleX(0);
      transition: all 0.3s ease-in-out 0s;
    }
    .item span:hover:before {
      visibility: visible;
      transform: scaleX(1);
    }
  }

  @media (max-width: 650px) {
  .mission-statement {
    line-height: 1em;
    padding-top: 33vh;
  }

}

/*--- Mobile View ---*/

@media (max-width: 450px) {
  .mission-statement {
    padding-top: 18vh;
  }
  .logo {
    margin-top: 5em;
  }
  .thirdSegment {
    min-height: 91.5em;
  }
  .fourthSegment {
    display: none;
  }
  .mission-statement span {
    display: none;
  }
  .statement {
    display: inline;
  }
  .statement p {
    margin: 0;
    line-height: 1.05em;
  }
  .fifthSegment p, .seventhSegment p {
    font-size: 1.5em;
    font-weight: lighter;
    text-align: center;
  }
  h1.ui.header {
    padding-top: 1em;
  }
  .ui.menu:not(.vertical) .right.item, .ui.menu:not(.vertical) .right.menu {
    margin-left: 0 !important;
  }
}

@media (max-width: 360px) {
  .logo {
    margin-top: 0.5em;
  }
  .fifthSegment p, .seventhSegment p {
    font-size: 1.3em;
    font-weight: lighter;
  }
  h1.ui.header {
    padding: 0;
  }
}

